# axis2-c

./: .gitignore  JSON.readme  build.md  configure.ac  json-c-r39.diff  json_patch_r787245.diff
axiom/src/attachments/: data_handler.c
axiom/src/om/: om_children_with_specific_attribute_iterator.c  om_document.c  om_element.c  om_output.c
axiom/src/soap/: soap11_builder_helper.c  soap12_builder_helper.c  soap_body.c  soap_header.c
axiom/src/xpath/: xpath_internals_iterators.c
axiom/test/om/: test_om.c
axiom/test/soap/: test_soap.c
axiom/test/util/: Makefile.am
axiom/test/xpath/: test_xpath.c
include/: axis2_http_transport.h  axis2_msg_ctx.h  jaxc.h  jaxc_badgerfish_reader.h  jaxc_badgerfish_writer.h  jaxc_json_reader.h  jaxc_json_writer.h  jaxc_mapped_reader.h  jaxc_mapped_writer.h  jaxc_node.h  jaxc_stack.h  jaxc_writer_element.h
neethi/src/: all.c  exactlyone.c  mtom_assertion_checker.c
neethi/test/: test.c
src/core/context/: msg_ctx.c
src/core/deployment/: desc_builder.c  repos_listener.c  svc_builder.c
src/core/description/: op.c  svc_grp.c
src/core/engine/: rest_disp.c
src/core/phaseresolver/: phase_resolver.c
src/core/receivers/: msg_recv.c  raw_xml_in_out_msg_recv.c
src/core/util/: Makefile.am  core_utils.c  jaxc_badgerfish_reader.c  jaxc_badgerfish_writer.c  jaxc_json_reader.c  jaxc_json_writer.c  jaxc_mapped_reader.c  jaxc_mapped_writer.c  jaxc_node.c  jaxc_stack.c  jaxc_stax_parser.c  jaxc_writer_element.c
src/modules/mod_addr/: addr_in_handler.c  addr_out_handler.c
util/src/: dir_handler.c  network_handler.c  utils.c
(+25 files in other folders)
